# FDA

./: .gitignore  CLAUDE.md  FILE_MANIFEST.txt  IMPLEMENTATION_EXAMPLES.md  INDEX.md  MCP_SETUP.md  OUTLOOK_SETUP.md  QUICK_REFERENCE.md  README.md  SCAFFOLD_SUMMARY.md  START_HERE.md  install.ps1  install.sh  pyproject.toml
docs/: blog.md  lion_chemtech_sharepoint_validation.md
fda/: __init__.py  base_agent.py  claude_backend.py  cli.py  config.py  daemon.py  discord_bot.py  executor_agent.py  fda_agent.py  file_indexer.py  librarian_agent.py  local_worker_agent.py  mcp_server.py  orchestrator.py  outlook.py  realtime_voice.py  scheduler.py  setup_server.py  slack_bot.py  telegram_approval.py  telegram_bot.py  worker_agent.py
fda/clients/: __init__.py  client_config.py
fda/clients/configs/: aonebnh.yaml  client_a.yaml.example
fda/comms/: __init__.py  message_bus.py
fda/data/: __init__.py  api_adapter.py  base.py  db_adapter.py  excel_adapter.py
fda/journal/: __init__.py  index.py  retriever.py  writer.py
fda/kakaotalk/: __init__.py  parser.py  reader.py
fda/remote/: __init__.py  deploy.py  file_transfer.py  ssh_manager.py
fda/state/: __init__.py  project_state.py
fda/utils/: __init__.py  timezone.py
scripts/: sharepoint_smoke_test.py
tests/: conftest.py  test_bots.py  test_file_indexer.py  test_journal.py  test_local_worker.py  test_mcp_server.py  test_message_bus.py  test_remote_worker.py  test_state.py
