[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fda-system"
version = "0.1.0"
description = "FDA Multi-Agent System for Project Coordination"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.45.0",
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "msal>=1.20.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.scripts]
fda = "fda.cli:main"
fda-mcp = "fda.mcp_server:main"

[tool.setuptools.packages.find]
include = ["fda*"]
exclude = ["journal*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.0.250",
]
telegram = [
    "python-telegram-bot>=22.0",
]
discord = [
    "discord.py[voice]>=2.0",
    "pynacl>=1.5.0",
    "openai>=1.0",
]
slack = [
    "slack-bolt>=1.14.0",
]
mcp = [
    "mcp>=1.0.0",
]
comms = [
    "python-telegram-bot>=22.0",
    "discord.py[voice]>=2.0",
    "pynacl>=1.5.0",
    "openai>=1.0",
    "slack-bolt>=1.14.0",
]
web = [
    "flask>=2.3.0",
]
all = [
    "python-telegram-bot>=22.0",
    "discord.py[voice]>=2.0",
    "pynacl>=1.5.0",
    "openai>=1.0",
    "flask>=2.3.0",
    "slack-bolt>=1.14.0",
    "mcp>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]